force-app/main/default/objects/Tech_Support__c/Tech_Support__c.object-meta.xml
<CustomObject>
    <label>Tech Support</label>
    <nameField>
        <displayFormat>TS - {000000}</displayFormat>
        <label>Tech Support Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tech Support</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>