force-app/main/default/objects/Tech_Support__c/fields/Actioned_Date__c.field-meta.xml
<CustomField>
    <fullName>Actioned_Date__c</fullName>
    <inlineHelpText>Actual date that the ticket has been actioned by Tech</inlineHelpText>
    <label>Actioned Date</label>
    <type>Date</type>
</CustomField>