force-app/main/default/objects/Tech_Support__c/fields/Admin_Only__c.field-meta.xml
<CustomField>
    <fullName>Admin_Only__c</fullName>
    <label>Admin(Only)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gmail</fullName>
            </value>
            <value>
                <fullName>Email Groups</fullName>
            </value>
            <value>
                <fullName>Sinature Blocks</fullName>
            </value>
            <value>
                <fullName>One Login</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Amazon Connect</fullName>
            </value>
            <value>
                <fullName>PayShield</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>