force-app/main/default/objects/Tech_Support__c/fields/Approval__c.field-meta.xml
<CustomField>
    <fullName>Approval__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approval</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Tech_Support</relationshipName>
    <type>Lookup</type>
</CustomField>