force-app/main/default/objects/Tech_Support__c/fields/Business_Value_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Business_Value_Sub_Category__c</fullName>
    <inlineHelpText>Business benefit this enhancement will deliver</inlineHelpText>
    <label>Business Value Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Business_Value__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Product Expansion</fullName>
            </value>
            <value>
                <fullName>Optimise/Simplify process</fullName>
            </value>
            <value>
                <fullName>Improve customer experience</fullName>
            </value>
            <value>
                <fullName>Data and insights</fullName>
            </value>
            <value>
                <fullName>Marketing campaign</fullName>
            </value>
            <value>
                <fullName>Marketing journey</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>