force-app/main/default/objects/Tech_Support__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Impacted functionality</inlineHelpText>
    <label>Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer Order</fullName>
            </value>
            <value>
                <fullName>Customer Account</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>Omni Channel / Cases</fullName>
            </value>
            <value>
                <fullName>Merchant Portal</fullName>
            </value>
            <value>
                <fullName>QFF Points</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Hardware</fullName>
            </value>
            <value>
                <fullName>New Starter/Termination</fullName>
            </value>
            <value>
                <fullName>Website Enhancement</fullName>
                <label>Website</label>
            </value>
            <value>
                <fullName>Salesforce Enhancement</fullName>
            </value>
            <value>
                <fullName>Reporting</fullName>
            </value>
            <value>
                <fullName>IVR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>