force-app/main/default/objects/Tech_Support__c/fields/Completion_Date_Planned__c.field-meta.xml
<CustomField>
    <fullName>Completion_Date_Planned__c</fullName>
    <label>Completion Date (Planned)</label>
    <type>Date</type>
</CustomField>