force-app/main/default/objects/Tech_Support__c/fields/Create_PSAG__c.field-meta.xml
<CustomField>
    <fullName>Create_PSAG__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create PSAG</label>
    <type>Checkbox</type>
</CustomField>