force-app/main/default/objects/Tech_Support__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <description>Reporting Department</description>
    <inlineHelpText>From this drop-down list, please select the department/area that you currently work in</inlineHelpText>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Customer Service</fullName>
                <default>true</default>
                <label>Customer Service</label>
            </value>
            <value>
                <fullName>Logistics/Flight Ticketers</fullName>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Visa &amp; Insurance</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Operations_HR</fullName>
                <label>Operations/HR</label>
            </value>
            <value>
                <fullName>Business Analysts</fullName>
            </value>
            <value>
                <fullName>Online_Publishing</fullName>
                <label>Online Publishing</label>
            </value>
            <value>
                <fullName>PAF</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
                <isActive>false</isActive>
                <label>Operations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>