force-app/main/default/objects/Tech_Support__c/fields/First_Level_Manager__c.field-meta.xml
<CustomField>
    <fullName>First_Level_Manager__c</fullName>
    <formula>CreatedBy.Manager.FirstName +&apos; &apos;+CreatedBy.Manager.LastName</formula>
    <label>First Level Manager</label>
    <type>Text</type>
</CustomField>