force-app/main/default/objects/Tech_Support__c/fields/Future_State__c.field-meta.xml
<CustomField>
    <fullName>Future_State__c</fullName>
    <label>Future State</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>