force-app/main/default/objects/Tech_Support__c/fields/Grading__c.field-meta.xml
<CustomField>
    <fullName>Grading__c</fullName>
    <label>Grading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>DONE</fullName>
            </value>
            <value>
                <fullName>IN PROGRESS</fullName>
            </value>
            <value>
                <fullName>THIS WEEK</fullName>
            </value>
            <value>
                <fullName>FUTURE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>