force-app/main/default/objects/Tech_Support__c/fields/How_do_I_replicate__c.field-meta.xml
<CustomField>
    <fullName>How_do_I_replicate__c</fullName>
    <label>How do I replicate?</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>