force-app/main/default/objects/Tech_Support__c/fields/Initial_Prioritisation_Review__c.field-meta.xml
<CustomField>
    <fullName>Initial_Prioritisation_Review__c</fullName>
    <label>Initial Prioritisation Review</label>
    <type>Date</type>
</CustomField>