force-app/main/default/objects/Tech_Support__c/fields/is_P_C_Tech_Ticket__c.field-meta.xml
<CustomField>
    <fullName>is_P_C_Tech_Ticket__c</fullName>
    <defaultValue>false</defaultValue>
    <description>PSAG - 191</description>
    <label>is P&amp;C Tech Ticket</label>
    <type>Checkbox</type>
</CustomField>