force-app/main/default/objects/Tech_Support__c/fields/Issue_Feature__c.field-meta.xml
<CustomField>
    <fullName>Issue_Feature__c</fullName>
    <label>Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Issue</fullName>
                <default>true</default>
                <label>Issue</label>
            </value>
            <value>
                <fullName>Feature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>