force-app/main/default/objects/Tech_Support__c/fields/IT_Comments__c.field-meta.xml
<CustomField>
    <fullName>IT_Comments__c</fullName>
    <label>IT Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>