force-app/main/default/objects/Tech_Support__c/fields/Jira_Ticket_Number__c.field-meta.xml
<CustomField>
    <fullName>Jira_Ticket_Number__c</fullName>
    <inlineHelpText>Link to relevant Tech Jira board</inlineHelpText>
    <label>Jira Ticket Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>