force-app/main/default/objects/Tech_Support__c/fields/Objective__c.field-meta.xml
<CustomField>
    <fullName>Objective__c</fullName>
    <label>Objective</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>