force-app/main/default/objects/Tech_Support__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low - No loss of service. The result does not prevent operation</fullName>
                <default>true</default>
                <label>Low - No loss of service. The result does not prevent operation</label>
            </value>
            <value>
                <fullName>Normal - Minor loss of service. Temporary workaround exists</fullName>
            </value>
            <value>
                <fullName>High - Severe impact to the business and no workaround exists.</fullName>
            </value>
            <value>
                <fullName>Urgent - Complete loss of service or a significant failure, no workaround exists.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>