force-app/main/default/objects/Tech_Support__c/fields/PSAG_Dev_Note__c.field-meta.xml
<CustomField>
    <fullName>PSAG_Dev_Note__c</fullName>
    <label>PSAG Dev Note</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>