force-app/main/default/objects/Tech_Support__c/fields/PSAG_Priority__c.field-meta.xml
<CustomField>
    <fullName>PSAG_Priority__c</fullName>
    <label>PSAG Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Highest</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Lowest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>