force-app/main/default/objects/Tech_Support__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Submitted for approval</fullName>
            </value>
            <value>
                <fullName>Approved - Pending assignment</fullName>
            </value>
            <value>
                <fullName>Assigned - Under review</fullName>
            </value>
            <value>
                <fullName>Assigned - In progress</fullName>
            </value>
            <value>
                <fullName>Assigned - Further information required</fullName>
            </value>
            <value>
                <fullName>Actioned</fullName>
            </value>
            <value>
                <fullName>Deferred</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Scoping</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
            <value>
                <fullName>Roadblock</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>