force-app/main/default/objects/Tech_Support__c/fields/Subject_Area_IT__c.field-meta.xml
<CustomField>
    <fullName>Subject_Area_IT__c</fullName>
    <label>Subject/Area (IT)</label>
    <length>200</length>
    <type>Text</type>
</CustomField>