force-app/main/default/objects/Tech_Support__c/fields/Value_Stream__c.field-meta.xml
<CustomField>
    <fullName>Value_Stream__c</fullName>
    <formula>CASE(Requesting_Team__c,
&quot;Product&quot;, &quot;Product&quot;,
&quot;Publishing&quot;, &quot;Product&quot;,
&quot;Marketing&quot;, &quot;Sell&quot;,
&quot;Sales &amp; Service&quot;, &quot;Sell&quot;,
&quot;Logistics&quot;, &quot;Admin&quot;,
&quot;Flights&quot;, &quot;Operations&quot;,
&quot;Ops / On Tour&quot;, &quot;Operations&quot;,
&quot;Finance&quot;, &quot;Admin&quot;,
&quot;P&amp;C&quot;, &quot;Admin&quot;,
&quot;Tech&quot;, &quot;Admin&quot;,
&quot;NA&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Value Stream</label>
    <type>Text</type>
</CustomField>