force-app/main/default/objects/Tech_Support__c/fields/Whats_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Whats_Impacted__c</fullName>
    <label>Whats Impacted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Outbound Comms</fullName>
            </value>
            <value>
                <fullName>Internal System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>