force-app/main/default/objects/Tech_Support__c/fields/Whats_Required__c.field-meta.xml
<CustomField>
    <fullName>Whats_Required__c</fullName>
    <label>Whats Required?</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>