force-app/main/default/objects/Tech_Support__c/fields/Who_is_impacted__c.field-meta.xml
<CustomField>
    <fullName>Who_is_impacted__c</fullName>
    <label>Who is impacted?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Business Analysts</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
                <label>Customer Service</label>
            </value>
            <value>
                <fullName>Customer Experience</fullName>
            </value>
            <value>
                <fullName>Customers</fullName>
            </value>
            <value>
                <fullName>Finance</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Logistics</fullName>
                <label>Logistics/Flight Ticketers</label>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Merchants</fullName>
            </value>
            <value>
                <fullName>Online Publishing</fullName>
            </value>
            <value>
                <fullName>Operations/HR</fullName>
            </value>
            <value>
                <fullName>PAF</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>