force-app/main/default/objects/Tech_Support__c/recordTypes/Bug.recordType-meta.xml
<RecordType>
    <fullName>Bug</fullName>
    <active>true</active>
    <description>An unexpected event that is disrupting an operational process or reducing the quality of a service.  Some common examples are: a problem with a customer order, a problem with a customer&apos;s account, an issue with our website, etc</description>
    <label>Incident</label>
</RecordType>