force-app/main/default/objects/Tech_Support__c/recordTypes/Complex.recordType-meta.xml
<RecordType>
    <fullName>Complex</fullName>
    <active>false</active>
    <description>Complex ticket which requires prioritisation</description>
    <label>Complex</label>
</RecordType>