force-app/main/default/objects/Tech_Support__c/recordTypes/Improvement.recordType-meta.xml
<RecordType>
    <fullName>Improvement</fullName>
    <active>true</active>
    <description>A request to modify an existing system or introduce a new feature to improve a process or service.  These types of requests will need to be scoped, estimated and prioritised.</description>
    <label>Enhancement</label>
</RecordType>