force-app/main/default/objects/Tech_Support__c/recordTypes/New_Feature.recordType-meta.xml
<RecordType>
    <fullName>New_Feature</fullName>
    <active>false</active>
    <description>Where an addition to our existing system is required. The scope of work will vary.</description>
    <label>New Feature</label>
</RecordType>