force-app/main/default/objects/Tech_Support__c/recordTypes/Service_Request.recordType-meta.xml
<RecordType>
    <fullName>Service_Request</fullName>
    <active>true</active>
    <description>Request for hardware, access or information.  Some common examples are: a new starter requires system access, a team member needs their access modified, a hardware request, a request for a new report or access to data.</description>
    <label>Service Request</label>
</RecordType>