force-app/main/default/objects/Tech_Support__c/validationRules/P_And_C_Record_Validation_Check.validationRule-meta.xml
<ValidationRule>
    <fullName>P_And_C_Record_Validation_Check</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
CONTAINS(SUBSTITUTE(Subject__c, &quot; &quot;, &quot;&quot;)  ,&apos;P&amp;C&apos;),
$Permission.Tech_Support_P_C_Record_Custom_Permission = false,
$Profile.Name != &apos;System Administrator&apos;)</errorConditionFormula>
    <errorDisplayField>Subject__c</errorDisplayField>
    <errorMessage>You have no access to P&amp;C Records</errorMessage>
</ValidationRule>