force-app/main/default/objects/Tech_Support__c/listViews/Actioned.listView-meta.xml
<ListView>
    <fullName>Actioned</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Actioned_Date__c</columns>
    <columns>Category__c</columns>
    <columns>Jira_Ticket_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Actioned</value>
    </filters>
    <label>Actioned</label>
</ListView>