force-app/main/default/objects/Tech_Support__c/listViews/active_Complex_Tickets.listView-meta.xml
<ListView>
    <fullName>active_Complex_Tickets</fullName>
    <columns>NAME</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>RECORDTYPE</columns>
    <columns>Subject__c</columns>
    <columns>Completion_Date_Planned__c</columns>
    <columns>Jira_Ticket_Number__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Initial_Prioritisation_Review__c</columns>
    <columns>Completion_Date_Actual__c</columns>
    <columns>Grading__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Tech_Support__c.Complex</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Actioned,Withdrawn</value>
    </filters>
    <label>Active - Complex Tickets</label>
    <sharedTo>
        <group>IT_Team</group>
        <role>Chief_Revenue_Officer</role>
    </sharedTo>
</ListView>