force-app/main/default/objects/Tech_Support__c/listViews/Active_Tickets.listView-meta.xml
<ListView>
    <fullName>Active_Tickets</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Category__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Jira_Ticket_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Approved - Pending assignment,Assigned - Under review,Assigned - In progress,Assigned - Further information required</value>
    </filters>
    <label>Active Tickets</label>
</ListView>