force-app/main/default/objects/Tech_Support__c/listViews/All_Active_Tickets.listView-meta.xml
<ListView>
    <fullName>All_Active_Tickets</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Subject__c</columns>
    <columns>Objective__c</columns>
    <columns>ETA__c</columns>
    <columns>Jira_Ticket_Number__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>,Approved - Pending assignment,Assigned - Under review,Assigned - In progress</value>
    </filters>
    <label>All - Active Tickets</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>