force-app/main/default/objects/Tech_Support__c/listViews/ALL_Tech_Support.listView-meta.xml
<ListView>
    <fullName>ALL_Tech_Support</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Description__c</columns>
    <columns>Department__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Who_is_impacted__c</columns>
    <columns>Status__c</columns>
    <columns>Issue_Feature__c</columns>
    <columns>Priority__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>ETA__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>ALL Tech Support</label>
    <sharedTo>
        <group>IT_Team</group>
    </sharedTo>
</ListView>