force-app/main/default/objects/Tech_Support__c/listViews/Awaiting_Approval.listView-meta.xml
<ListView>
    <fullName>Awaiting_Approval</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Category__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>Subject__c</columns>
    <columns>Priority__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>First_Level_Manager__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Jira_Ticket_Number__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Submitted for approval</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Tech_Support__c.Improvement,Tech_Support__c.Bug,Tech_Support__c.Service_Request</value>
    </filters>
    <label>Awaiting Approval</label>
</ListView>